# hack-mlops

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  tasks.py  tox.ini
.dvc/: config
data/: .gitignore  imdb-reviews-dataset.csv.dvc
ndata/: .gitignore  images.dvc  xml.dvc
src/mymlops/: __main__.py  config.yaml  evaluate.py  hydra_instantiate.py  hydra_main.py  hydra_package.py  make_features.py  prepare_data.py  train.py
src/mymlops/configs/: config-merge.yaml  config.yaml  hydra_config.yaml
src/mymlops/configs/experiment/: experiment-w-resent18.yaml  experiment-w-resent50.yaml
src/mymlops/configs/experiment/deeper/: deep1.yaml  deep2.yaml
src/mymlops/configs/loss_function/: arface.yaml  softmax.yaml  surface.yaml
tests/: test_main.py
