[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mymlops"
version = "0.0.1"
dependencies = [
  "click>=8.0,<9.0",
  "dvc>=3.0,<4.0",
]
requires-python = ">=3.12,<3.13"
description = "Sample Python project, managed by Team Build."
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest>=9.0,<10.0",
  "tox>=4.0,<5.0",
]
all = [
  "mymlops[test]",
  "invoke>=2.0,<3.0",
  "ruff<1.0",
]

[project.scripts]
mymlops = "mymlops.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mymlops"]
