[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mymlops"
version = "0.0.1"
dependencies = [
  "click>=8.0,<9.0",
  "hydra-core>=1.0,<2.0",
  # "joblib>=1.0,<2.0",
  # "omegaconf>=2.0,<3.0",
  # "pandas>=2.0,<3.0",
  # "scikit-learn>=1.0,<2.0",
]
requires-python = ">=3.12,<3.13"
description = "Sample Python project, managed by Team Build."
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest>=9.0,<10.0",
  "tox>=4.0,<5.0",
]
all = [
  "mymlops[test]",
  "invoke>=2.0,<3.0",
  "isort>=7.0,<8.0",
  "ruff<1.0",
]

[project.scripts]
myml = "mymlops.__main__:main"
myml-prepare = "mymlops.prepare_data:main"
myml-make-features = "mymlops.make_features:main"
myml-train = "mymlops.train:main"
myml-evaluate = "mymlops.evaluate:main"
myml-hydra-main = "mymlops.hydra_main:main"
myml-hydra-instantiate = "mymlops.hydra_instantiate:main"
myml-hydra-package = "mymlops.hydra_package:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mymlops"]
